Add Index view + rutes moved to One Line

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12067,3 +12067,13 @@ textarea.form-control-lg {
     background-size: cover;
 }
 
+.hbg {
+
+  background-color: #444;
+  transition: background-color 0.3s;
+}
+
+.hbg:hover {
+    background-color: #3a3a3a;
+  }
+
