--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,3 +7,13 @@
     background-position: center center;
     background-size: cover;
 }
+
+.hbg {
+
+  background-color: #444;
+  transition: background-color 0.3s;
+}
+
+.hbg:hover {
+    background-color: #3a3a3a;
+  }
