Add Pagination on Index view/table

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12077,3 +12077,9 @@ textarea.form-control-lg {
     background-color: #3a3a3a;
   }
 
+  .profile_pic {
+    border-radius: 50%;
+    width: 4rem;
+    height: 4rem;
+  }
+
