--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -17,3 +17,9 @@
 .hbg:hover {
     background-color: #3a3a3a;
   }
+
+  .profile_pic {
+    border-radius: 50%;
+    width: 4rem;
+    height: 4rem;
+  }
